argocd/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
  - name: radarr
    port: 80
    targetPort: 7878
  selector:
    app: radarr
